--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^2.51.3",
     "esbuild": "^0.17.11",
     "postcss": "^8.4.21",
+    "stimulus-notification": "^2.2.0",
     "tailwindcss": "^3.2.7"
   },
   "scripts": {
